@@ -244,7 +244,7 @@ NG_DOCS={
       "type": "directive",
       "moduleName": "maDashboards",
       "shortDescription": "&lt;ma-serial-chart style=&quot;height: 300px; width: 100%&quot; series-1-values=&quot;point1Values&quot; series-1-point=&quot;point1&quot; default-type=&quot;column&quot;&gt;",
-      "keywords": "advanced advancedchart allows amcharts api array attributes axis balloon bar chart charts color column configuration create created customizing dashboard data default default-axis default-balloon-text default-color default-type defaults demo design directive displaying element example examples extend format generated graphs height hex inputs js left legend linechart madashboards maserialchart mode moment note number object objects option options overides pass point point1 point1values points provide provided range regular render replace rollup series series-1-point series-1-values series-x-axis series-x-balloon-text series-x-color series-x-point series-x-title series-x-type series-x-values set sets settings smoothedline stack-type stacking starting step string style text time time-format timestamps timezone type ui-sref values variations width"
+      "keywords": "advanced advancedchart allows amcharts api array attributes axis balloon bar chart charts color column configuration create created cursor customizing dashboard data default default-axis default-balloon-text default-color default-type defaults demo design directive displaying element example examples export extend format functionality generated graphs height hex inputs js left legend linechart madashboards maserialchart mode moment note number object objects option options overides pass point point1 point1values points provide provided range regular render replace rollup series series-1-point series-1-values series-x-axis series-x-balloon-text series-x-color series-x-point series-x-title series-x-type series-x-values set sets settings smoothedline stack-type stacking starting step string style text time time-format timestamps timezone true turned type ui-sref values variations width"
     },
     {
       "section": "api",
