@@ -34,6 +34,9 @@
 </div></td></tr><tr><td>series-X-axis <div><em>(optional)</em></div></td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="madashboards-maserialchart-page"><p>The defaults axis used for the given series (replace <code>X</code> with series number starting with 1). Can be <code>&quot;right&quot;</code> or <code>&quot;left&quot;</code>.</p>
 </div></td></tr><tr><td>series-X-balloon-text <div><em>(optional)</em></div></td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="madashboards-maserialchart-page"><p>Overides the balloon text with a specified string for the given series (replace <code>X</code> with series number starting with 1).</p>
 </div></td></tr><tr><td>series-X-title <div><em>(optional)</em></div></td><td><a href="" class="label type-hint type-hint-string">string</a></td><td><div class="madashboards-maserialchart-page"><p>Sets the text in the legend for the given series (replace <code>X</code> with series number starting with 1).</p>
+</div></td></tr><tr><td>export <div><em>(optional)</em></div></td><td><a href="" class="label type-hint type-hint-boolean">boolean</a></td><td><div class="madashboards-maserialchart-page"><p>If set to true, chart export functionality will be turned on. Defaults to off.</p>
+</div></td></tr><tr><td>balloon <div><em>(optional)</em></div></td><td><a href="" class="label type-hint type-hint-boolean">boolean</a></td><td><div class="madashboards-maserialchart-page"><p>If set to true, chart&#39;s cursor and balloon will be turned on. Defaults to off.</p>
+</div></td></tr><tr><td>legend <div><em>(optional)</em></div></td><td><a href="" class="label type-hint type-hint-boolean">boolean</a></td><td><div class="madashboards-maserialchart-page"><p>If set to true, chart&#39;s legend will be turned on. Defaults to off.</p>
 </div></td></tr><tr><td>options <div><em>(optional)</em></div></td><td><a href="" class="label type-hint type-hint-object">object</a></td><td><div class="madashboards-maserialchart-page"><p>extend AmCharts configuration object for customizing design of the chart (see <a href="https://docs.amcharts.com/3/javascriptcharts/AmSerialChart">amCharts</a>)</p>
 </div></td></tr></tbody></table></div>
 </div>
