@@ -14,6 +14,7 @@
 * Documentation of Mango Dashboards AngularJS directives, services and filters
 * Live value displays have a red cross hatch applied when the API goes down
 * Added option on <ma-point-values> for auto rollup intervals
+* Added export, legend, and balloon attributes to <am-serial-chart>
 
 *Version 3.1.1*
 * Fix admin template menu in Firefox
